[tool.poetry]
name = "cascade"
version = "1.0.0"
description = ""
authors = ["Tim Farrell <tim@thecookiejar.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.3"
boto3 = "^1.12.12"
rule-engine = "^2.2.1"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
